2018-03-17  Roland Winkler  <winkler@gnu.org>
	* bbdb.el (bbdb-register-record): New function renamed from
	bbdb-hash-record.
	(bbdb-parse-records, bbdb-change-record): Use it.

2018-03-17  Roland Winkler  <winkler@gnu.org>
	* bbdb-com.el (bbdb-create-internal): Bug fix.  Support old
	calling sequence with warning.

2018-03-02  Stefan Monnier <monnier@iro.umontreal.ca>
	* bbdb.el: Add missing "Maintainer:" header

2018-01-06  Roland Winkler  <winkler@gnu.org>
	* configure.ac: Increase version number to 3.2.

2018-01-06  Roland Winkler  <winkler@gnu.org>
	* bbdb-tex.el (bbdb-tex-alist, bbdb-tex-address-layout): Declare
	defcustom type.

2018-01-06  Roland Winkler  <winkler@gnu.org>
	* bbdb-vm-aux.el: Don't require VM when compiled.

2018-01-06  Stefan Monnier <monnier@iro.umontreal.ca>
	* bbdb-vm.el: Don't require VM when compiled.

	Trim the list of required packages from VM.

	* bbdb-gnus.el (bbdb-insinuate-gnus):
	* bbdb-vm.el (bbdb-insinuate-vm): Use defalias.

2018-01-06  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-gnus.el, lisp/bbdb-gnus-aux.el: Split from
	lisp/bbdb-gnus.el.
	* lisp/bbdb-vm.el, lisp/bbdb-vm-aux.el: Split from
	lisp/bbdb-vm.el.
	* lisp/Makefile.am, lisp/makefile-temp: Update accordingly.

2017-12-24  Roland Winkler  <winkler@gnu.org>
	* README: Update for elpa.git.

2017-11-17  Stefan Monnier <monnier@iro.umontreal.ca>
	Prepare BBDB for elpa.git.
	* lisp/bbdb-anniv.el, lisp/bbdb-com.el, lisp/bbdb-ispell.el:
	* lisp/bbdb-message.el, lisp/bbdb-mhe.el, lisp/bbdb-migrate.el:
	* lisp/bbdb-mu4e.el, lisp/bbdb-mua.el, lisp/bbdb-pgp.el:
	* lisp/bbdb-rmail.el, lisp/bbdb-site.el.in, lisp/bbdb-snarf.el:
	* lisp/bbdb-tex.el, lisp/bbdb-wl.el, lisp/bbdb.el: Update
	copyright notice.  Follow conventions for comments.  Use
	declare-function.  Provide arg WHEN for
	define-obsolete-function-alias and define-obsolete-variable-alias.
	* lisp/bbdb-site.el.in (bbdb-version-date): Remove.
	(bbdb-tex-path): Use more flexible default.